--- a/rocam-recruitment-evaluator/package.json
+++ b/rocam-recruitment-evaluator/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "rocam-recruitment-evaluator",
+  "name": "rocam-recrutamento",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
-    "@google/genai": "^1.39.0",
-    "react-dom": "^19.2.4"
-  "firebase": "^11.0.0",
-  "lucide-react": "latest",
-  "react": "latest",
-  "react-dom": "latest"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "lucide-react": "^0.284.0",
+    "firebase": "^11.0.0"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
